--- a/Reservia.html
+++ b/Reservia.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="assets/CSS/mobile.css" />
+    <link rel="stylesheet" media ="screen and (max-width:768px"href="assets/CSS/mobile.css" />
     <link rel="stylesheet" media="screen and (max-width:991px)" href="assets/CSS/tablette.css" />
     <!-- 4eme css? <link rel="stylesheet" media="screen and (max-width:1200px)" href="assets/CSS/?.css" /> -->
     <link rel="stylesheet" href="assets/CSS/pc.css" />
