--- a/Reservia.html
+++ b/Reservia.html
@@ -3,13 +3,16 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" media ="screen and (max-width:768px"href="assets/CSS/mobile.css" />
+    <!-- Les différents CSS en fonction de la taille de l'écran -->
+    <link rel="stylesheet" media="screen and (max-width:768px)" href="assets/CSS/mobile.css" />
     <link rel="stylesheet" media="screen and (max-width:991px)" href="assets/CSS/tablette.css" />
     <!-- 4eme css? <link rel="stylesheet" media="screen and (max-width:1200px)" href="assets/CSS/?.css" /> -->
     <link rel="stylesheet" href="assets/CSS/pc.css" />
+    <!-- Les liens pour allez récuper ma police d'écriture "Raleway"-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
+    <!-- Le lien pour les FA icone -->
     <script src="https://kit.fontawesome.com/0b5afe6080.js" crossorigin="anonymous"></script>
     <title>Reservia</title>
 </head>
@@ -20,14 +23,16 @@
         <nav>
             <a href="#hebergement" id="heberg">Hébergements</a>
             <a href="#activite" id="act">Activités</a>
-            <a href="" id="inscri">S'inscrire</a>
+            <div>
+                <a href="" id="inscri">S'inscrire</a>
+            </div>
         </nav>
     </header>
     <main>
         <section class="section">
-            <h1>Trouver votre hébergement pour des vacances de rêve</h1>
-            <p>En plein centre ville ou en pleine nature</p>
             <article>
+                <h1>Trouver votre hébergement pour des vacances de rêve</h1>
+                <p>En plein centre ville ou en pleine nature</p>
                 <form>
                     <i class="fas fa-map-marker-alt"></i>
                     <input type="search" name="ville" placeholder="Ville,Pays" maxlength="38" id="search">
@@ -46,14 +51,14 @@
                         <i class="fas fa-child"></i><button class="boutton">Familial</button>
                     </li>
                     <li>
-                        <i class="fas fa-heart"></i><button class="boutton">Romantique</button>
+                        <i class="fas fa-heart"><button class="boutton">Romantique</button></i>
                     </li>
                     <li>
-                        <i class="fas fa-dog"></i><button class="boutton">Animaux autorisés</button>
+                        <button class="boutton"><i class="fas fa-dog"></i>Animaux autorisés</button>
                     </li>
                 </ul>
+                <p><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
             </article>
-            <p><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
         </section>
         <section class="section1">
             <article class="article">
