--- a/Reservia.html
+++ b/Reservia.html
@@ -14,18 +14,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
     <!-- Le lien pour les FA icone -->
     <script src="https://kit.fontawesome.com/0b5afe6080.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" type="image/png" href="Assets/Images/logo/r.png">
     <title>Reservia</title>
 </head>
 
 <body>
     <header>
-        <img src="assets/Images/logo/Reservia2.png" id="logo">
+        <a href="Reservia.html"><img src="assets/Images/logo/Reservia.png" id="logo"></a>
         <nav>
-            <a href="#hebergement" id="heberg">Hébergements</a>
-            <a href="#activite" id="act">Activités</a>
-            <div>
-                <a href="" id="inscri">S'inscrire</a>
-            </div>
+            <ul>
+                <li>
+                    <a href="#hebergement" id="heberg">Hébergements</a>
+                </li>
+                <li>
+                    <a href="#activite" id="act">Activités</a>
+                </li>
+            </ul>
+            <a href="" id="inscri">S'inscrire</a>
         </nav>
     </header>
     <main>
@@ -34,93 +39,111 @@
                 <h1>Trouver votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre ville ou en pleine nature</p>
                 <form>
-                    <i class="fas fa-map-marker-alt"></i>
-                    <input type="search" name="ville" placeholder="Ville,Pays" maxlength="38" id="search">
-                    <input type="submit" value="Rechercher" id="bouton">
+                    <i class="fas fa-map-marker-alt pos"></i>
+                    <input type="search" name="ville" placeholder="Ville,Pays" maxlength="38" id="txt">
+                    <i id="search1" class="fas fa-lg fa-search"></i><input id="search" type="submit"
+                        value="Rechercher"></i>
                 </form>
             </article>
             <article>
-                <ul id="filtre">
-                    <li>
-                        <p>Filtres</p>
-                    </li>
-                    <li>
-                        <i class="fas fa-money-bill-wave"></i><button class="boutton">Économique</button>
-                    </li>
-                    <li>
-                        <i class="fas fa-child"></i><button class="boutton">Familial</button>
-                    </li>
-                    <li>
-                        <i class="fas fa-heart"><button class="boutton">Romantique</button></i>
-                    </li>
-                    <li>
-                        <button class="boutton"><i class="fas fa-dog"></i>Animaux autorisés</button>
-                    </li>
-                </ul>
-                <p><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
+                <div id="filtr">
+                    <h3>Filtres</h3>
+                    <ul id="filtre">
+                        <li>
+                            <i class="fas fa-money-bill-wave bleu"></i>
+                            <button class="boutton">Économique</button>
+                        </li>
+                        <li>
+                            <i class="fas fa-child bleu"></i>
+                            <button class="boutton">Familial</button>
+                        </li>
+                        <li>
+                            <i class="fas fa-heart bleu"></i>
+                            <button class="boutton">Romantique</button>
+                        </li>
+                        <li>
+                            <i class="fas fa-dog bleu"></i>
+                            <button class="boutton">Animaux autorisés</button>
+                        </li>
+                    </ul>
+                </div>
+                <p><i class="fas fa-info bleu"></i>Plus de 500 logements sont disponibles dans cette ville</p>
             </article>
         </section>
         <section class="section1">
             <article class="article">
                 <ul class="liste" id="hebergement">
-                    <li>
-                        <h2>Hébergements à Marseille</h2>
-                    </li>
-                    <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/cannebiereS.jpg" class="imgheberg">
-                        <div class="txtheber">
-                            <h3>Auberge La Cannebière</h3>
-                            <p>Nuit à partir de 25€</p>
-                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                class="fas fa-star"></i><span><i class="fas fa-star"></i></span>
-                        </div>
-                    </li>
-                    <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/portS.jpg" class="imgheberg">
-                        <div class="txtheber">
-                            <h3>Hôtel du port</h3>
-                            <p>Nuit à partir de 52€</p>
-                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                class="fas fa-star"></i><i class="fas fa-star"></i>
-                        </div>
-                    </li>
-                    <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/mouetteS.jpg" class="imgheberg">
-                        <div class="txtheber">
-                            <h3>Hôtel Les mouettes</h3>
-                            <p>Nuit à partir de 76€</p>
-                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                class="fas fa-star"></i><span><i class="fas fa-star"></i></span>
-                        </div>
-                    </li>
-                    <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/merS.jpg" class="imgheberg">
+                    <div class="bloc1">
+                        <li>
+                            <h2>Hébergements à Marseille</h2>
+                        </li>
+                        <li class="heberg">
+                            <img src="assets/Images/hebergements/4_small/cannebiereS.jpg" class="imgheberg">
+                            <div class="txtheber">
+                                <h3>Auberge La Cannebière</h3>
+                                <p>Nuit à partir de 25€</p>
+                                <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                    class="fas fa-star bleu"></i><i class="fas fa-star bleu">
+                                </i><i class="fas fa-star gris"></i>
+                            </div>
+                        </li>
+                        <li class="heberg">
+                            <img src="assets/Images/hebergements/4_small/portS.jpg" class="imgheberg">
+                            <div class="txtheber">
+                                <h3>Hôtel du port</h3>
+                                <p>Nuit à partir de 52€</p>
+                                <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                    class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                    class="fas fa-star bleu"></i>
+                            </div>
+                        </li>
+                        <li class="heberg">
+                            <img src="assets/Images/hebergements/4_small/mouetteS.jpg" class="imgheberg">
+                            <div class="txtheber">
+                                <h3>Hôtel Les mouettes</h3>
+                                <p>Nuit à partir de 76€</p>
+                                <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                    class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                    class="fas fa-star gris"></i>
+                            </div>
+                        </li>
+                    </div>
+                    <div class="bloc1">
+                        <li class="heberg">
+                            <img src="assets/Images/hebergements/4_small/merS.jpg" class="imgheberg">
 
-                        <div class="txtheber">
-                            <h3>Hôtel de la mer</h3>
-                            <p>Nuit à partir de 46€</p>
-                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><span><i
-                                    class="fas fa-star"></i><i class="fas fa-star"></i></span>
-                        </div>
-                    </li>
-                    <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/panierS.jpg" class="imgheberg">
-                        <div class="txtheber">
-                            <h3>Auberge Le Panier</h3>
-                            <p>Nuit à partir de 23€</p>
-                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                class="fas fa-star"></i><span><i class="fas fa-star"></i></span>
-                        </div>
-                    </li>
-                    <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/aminaS.jpg" class="imgheberg">
-                        <div class="txtheber">
-                            <h3>Hôtel chez Amina</h3>
-                            <p>Nuit à partir de 96€</p>
-                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                class="fas fa-star"></i><i class="fas fa-star"></i>
-                        </div>
-                    </li>
+                            <div class="txtheber">
+                                <h3>Hôtel de la mer</h3>
+                                <p>Nuit à partir de 46€</p>
+                                <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                    class="fas fa-star bleu"></i><i class="fas fa-star gris"></i><i
+                                    class="fas fa-star gris"></i>
+                            </div>
+                        </li>
+                        <li class="heberg">
+                            <img src="assets/Images/hebergements/4_small/panierS.jpg" class="imgheberg">
+                            <div class="txtheber">
+                                <h3>Auberge Le Panier</h3>
+                                <p>Nuit à partir de 23€</p>
+                                <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                    class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                    class="fas fa-star gris"></i>
+                            </div>
+                        </li>
+                        <li class="heberg">
+                            <img src="assets/Images/hebergements/4_small/aminaS.jpg" class="imgheberg">
+                            <div class="txtheber">
+                                <h3>Hôtel chez Amina</h3>
+                                <p>Nuit à partir de 96€</p>
+                                <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                    class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                    class="fas fa-star bleu"></i>
+                            </div>
+                        </li>
+                        <li>
+                            <p class="affplus">Afficher plus</p>
+                        </li>
+                    </div>
                 </ul>
             </article>
             <article class="article">
@@ -135,8 +158,10 @@
                         <div class="txtpop">
                             <h3>Hôtel Le soleil du matin</h3>
                             <p>Nuit à partir de 128€</p>
-                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                class="fas fa-star"></i><i class="fas fa-star"></i>
+                            <div><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                    class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                    class="fas fa-star bleu"></i>
+                            </div>
                         </div>
 
                     </li>
@@ -145,8 +170,11 @@
                         <div class="txtpop">
                             <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                             <p>Nuit à partir de 71€</p>
-                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                class="fas fa-star"></i><span><i class="fas fa-star"></i></span>
+                            <div>
+                                <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                    class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                    class="fas fa-star gris"></i>
+                            </div>
                         </div>
                     </li>
                     <li class="pop">
@@ -154,8 +182,11 @@
                         <div class="txtpop">
                             <h3>Hôtel Tout bleu et Blanc</h3>
                             <p>Nuit à partir de 68€</p>
-                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                class="fas fa-star"></i><span><i class="fas fa-star"></i></span>
+                            <div>
+                                <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                    class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                                    class="fas fa-star gris"></i>
+                            </div>
                         </div>
                     </li>
                 </ul>
