--- a/Reservia.html
+++ b/Reservia.html
@@ -140,9 +140,7 @@
                                     class="fas fa-star bleu"></i>
                             </div>
                         </li>
-                        <li>
-                            <p class="affplus">Afficher plus</p>
-                        </li>
+                        <a href="#" class="affplus">Afficher plus</a>
                     </div>
                 </ul>
             </article>
@@ -163,7 +161,6 @@
                                     class="fas fa-star bleu"></i>
                             </div>
                         </div>
-
                     </li>
                     <li class="pop">
                         <img src="assets/Images/hebergements/4_small/coeurdeleauS.jpg" class="imgpop">
