--- a/Reservia.html
+++ b/Reservia.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <!-- Les différents CSS en fonction de la taille de l'écran -->
-    <link rel="stylesheet" media="screen and (max-width:768px)" href="assets/CSS/mobile.css" />
-    <link rel="stylesheet" media="screen and (max-width:991px)" href="assets/CSS/tablette.css" />
+    <link rel="stylesheet" href="assets/CSS/mobile.css" />
+    <link rel="stylesheet" href="assets/CSS/tablette.css" />
     <!-- 4eme css? <link rel="stylesheet" media="screen and (max-width:1200px)" href="assets/CSS/?.css" /> -->
     <link rel="stylesheet" href="assets/CSS/pc.css" />
     <!-- Les liens pour allez récuper ma police d'écriture "Raleway"-->
@@ -71,92 +71,96 @@
             </article>
         </section>
         <section class="section1">
-            <article class="article">
+            <article class="marseille">
+                <h2 class="titremar">Hébergements à Marseille</h2>
                 <ul class="liste" id="hebergement">
-                    <div class="bloc1">
-                        <li>
-                            <h2>Hébergements à Marseille</h2>
-                        </li>
-                        <li class="heberg">
-                            <img src="assets/Images/hebergements/4_small/cannebiereS.jpg" class="imgheberg">
-                            <div class="txtheber">
-                                <h3>Auberge La Cannebière</h3>
-                                <p>Nuit à partir de 25€</p>
+                    <li class="heberg">
+                        <img src="assets/Images/hebergements/4_small/cannebiereS.jpg" class="imgheberg">
+                        <div class="txtheber">
+                            <h3>Auberge La Cannebière</h3>
+                            <p>Nuit à partir de 25€</p>
+                            <div class="etoile">
                                 <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
                                     class="fas fa-star bleu"></i><i class="fas fa-star bleu">
                                 </i><i class="fas fa-star gris"></i>
                             </div>
-                        </li>
-                        <li class="heberg">
-                            <img src="assets/Images/hebergements/4_small/portS.jpg" class="imgheberg">
-                            <div class="txtheber">
-                                <h3>Hôtel du port</h3>
-                                <p>Nuit à partir de 52€</p>
+                        </div>
+                    </li>
+                    <li class="heberg">
+                        <img src="assets/Images/hebergements/4_small/portS.jpg" class="imgheberg">
+                        <div class="txtheber">
+                            <h3>Hôtel du port</h3>
+                            <p>Nuit à partir de 52€</p>
+                            <div class="etoile">
                                 <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
                                     class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
                                     class="fas fa-star bleu"></i>
                             </div>
-                        </li>
-                        <li class="heberg">
-                            <img src="assets/Images/hebergements/4_small/mouetteS.jpg" class="imgheberg">
-                            <div class="txtheber">
-                                <h3>Hôtel Les mouettes</h3>
-                                <p>Nuit à partir de 76€</p>
+                        </div>
+                    </li>
+                    <li class="heberg">
+                        <img src="assets/Images/hebergements/4_small/mouetteS.jpg" class="imgheberg">
+                        <div class="txtheber">
+                            <h3>Hôtel Les mouettes</h3>
+                            <p>Nuit à partir de 76€</p>
+                            <div class="etoile">
                                 <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
                                     class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
                                     class="fas fa-star gris"></i>
                             </div>
-                        </li>
-                    </div>
-                    <div class="bloc1">
-                        <li class="heberg">
-                            <img src="assets/Images/hebergements/4_small/merS.jpg" class="imgheberg">
+                        </div>
+                    </li>
+                    <li class="heberg">
+                        <img src="assets/Images/hebergements/4_small/merS.jpg" class="imgheberg">
 
-                            <div class="txtheber">
-                                <h3>Hôtel de la mer</h3>
-                                <p>Nuit à partir de 46€</p>
+                        <div class="txtheber">
+                            <h3>Hôtel de la mer</h3>
+                            <p>Nuit à partir de 46€</p>
+                            <div class="etoile">
                                 <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
                                     class="fas fa-star bleu"></i><i class="fas fa-star gris"></i><i
                                     class="fas fa-star gris"></i>
                             </div>
-                        </li>
-                        <li class="heberg">
-                            <img src="assets/Images/hebergements/4_small/panierS.jpg" class="imgheberg">
-                            <div class="txtheber">
-                                <h3>Auberge Le Panier</h3>
-                                <p>Nuit à partir de 23€</p>
+                        </div>
+                    </li>
+                    <li class="heberg">
+                        <img src="assets/Images/hebergements/4_small/panierS.jpg" class="imgheberg">
+                        <div class="txtheber">
+                            <h3>Auberge Le Panier</h3>
+                            <p>Nuit à partir de 23€</p>
+                            <div class="etoile">
                                 <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
                                     class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
                                     class="fas fa-star gris"></i>
                             </div>
-                        </li>
-                        <li class="heberg">
-                            <img src="assets/Images/hebergements/4_small/aminaS.jpg" class="imgheberg">
-                            <div class="txtheber">
-                                <h3>Hôtel chez Amina</h3>
-                                <p>Nuit à partir de 96€</p>
+                        </div>
+                    </li>
+                    <li class="heberg">
+                        <img src="assets/Images/hebergements/4_small/aminaS.jpg" class="imgheberg">
+                        <div class="txtheber">
+                            <h3>Hôtel chez Amina</h3>
+                            <p>Nuit à partir de 96€</p>
+                            <div class="etoile">
                                 <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
                                     class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
                                     class="fas fa-star bleu"></i>
                             </div>
-                        </li>
-                        <a href="#" class="affplus">Afficher plus</a>
-                    </div>
-                </ul>
-            </article>
-            <article class="article">
-                <ul class="liste" id="populaire">
-                    <li>
-                        <a>
-                            <h2>Les plus populaire</h2><i class="fas fa-chart-line"></i>
-                        </a>
+                        </div>
                     </li>
+                </ul>
+                <a href="#" class="affplus">Afficher plus</a>
+            </article>
+            <article class="popu">
+                <a class="titrepop">
+                    <h2>Les plus populaire</h2><i class="fas fa-chart-line graph"></i>
+                </a>
+                <ul class="liste" id="populaire">
                     <li class="pop">
                         <img src="assets/Images/hebergements/4_small/soleildumatinS.jpg" class="imgpop">
                         <div class="txtpop">
                             <h3>Hôtel Le soleil du matin</h3>
                             <p>Nuit à partir de 128€</p>
-                            <div><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
+                            <div class="etoile"><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
                                     class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
                                     class="fas fa-star bleu"></i>
                             </div>
@@ -167,7 +171,7 @@
                         <div class="txtpop">
                             <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                             <p>Nuit à partir de 71€</p>
-                            <div>
+                            <div class="etoile">
                                 <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
                                     class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
                                     class="fas fa-star gris"></i>
@@ -179,7 +183,7 @@
                         <div class="txtpop">
                             <h3>Hôtel Tout bleu et Blanc</h3>
                             <p>Nuit à partir de 68€</p>
-                            <div>
+                            <div class="etoile">
                                 <i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
                                     class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i
                                     class="fas fa-star gris"></i>
