--- a/Reservia.html
+++ b/Reservia.html
@@ -6,7 +6,6 @@
     <!-- Les différents CSS en fonction de la taille de l'écran -->
     <link rel="stylesheet" href="assets/CSS/mobile.css" />
     <link rel="stylesheet" href="assets/CSS/tablette.css" />
-    <!-- 4eme css? <link rel="stylesheet" media="screen and (max-width:1200px)" href="assets/CSS/?.css" /> -->
     <link rel="stylesheet" href="assets/CSS/pc.css" />
     <!-- Les liens pour allez récuper ma police d'écriture "Raleway"-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,7 +39,7 @@
                 <p>En plein centre ville ou en pleine nature</p>
                 <form>
                     <i class="fas fa-map-marker-alt pos"></i>
-                    <input type="search" name="ville" placeholder="Ville,Pays" maxlength="38" id="txt">
+                    <input type="search" placeholder="Marseille, France" id="txt">
                     <i id="search1" class="fas fa-lg fa-search"></i><input id="search" type="submit"
                         value="Rechercher"></i>
                 </form>
