--- a/Reservia.html
+++ b/Reservia.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <!-- Les différents CSS en fonction de la taille de l'écran -->
-    <link rel="stylesheet" href="assets/CSS/mobile.css" />
-    <link rel="stylesheet" href="assets/CSS/tablette.css" />
-    <link rel="stylesheet" href="assets/CSS/pc.css" />
+    <link rel="stylesheet" href="Assets/CSS/mobile.css" />
+    <link rel="stylesheet" href="Assets/CSS/tablette.css" />
+    <link rel="stylesheet" href="Assets/CSS/pc.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Les liens pour allez récuper ma police d'écriture "Raleway"-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +20,7 @@
 
 <body>
     <header>
-        <a href="Reservia.html"><img src="assets/Images/logo/Reservia.png" id="logo"></a>
+        <a href="Reservia.html"><img src="assets/Images/logo/Reservia.png" id="logo" alt="Logo"></a>
         <nav>
             <ul>
                 <li>
@@ -41,7 +42,7 @@
                     <i class="fas fa-map-marker-alt pos"></i>
                     <input type="search" placeholder="Marseille, France" id="txt">
                     <i id="search1" class="fas fa-lg fa-search"></i><input id="search" type="submit"
-                        value="Rechercher"></i>
+                        value="Rechercher">
                 </form>
             </article>
             <article>
@@ -74,7 +75,7 @@
                 <h2 class="titremar">Hébergements à Marseille</h2>
                 <ul class="liste" id="hebergement">
                     <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/cannebiereS.jpg" class="imgheberg">
+                        <img src="assets/Images/hebergements/4_small/cannebiereS.jpg" class="imgheberg" alt="Image Auberge Cannebiere">
                         <div class="txtheber">
                             <h3>Auberge La Cannebière</h3>
                             <p>Nuit à partir de 25€</p>
@@ -86,7 +87,7 @@
                         </div>
                     </li>
                     <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/portS.jpg" class="imgheberg">
+                        <img src="assets/Images/hebergements/4_small/portS.jpg" class="imgheberg" alt="Image Hôtel Port">
                         <div class="txtheber">
                             <h3>Hôtel du port</h3>
                             <p>Nuit à partir de 52€</p>
@@ -98,7 +99,7 @@
                         </div>
                     </li>
                     <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/mouetteS.jpg" class="imgheberg">
+                        <img src="assets/Images/hebergements/4_small/mouetteS.jpg" class="imgheberg" alt="Image Hôtel Mouettes">
                         <div class="txtheber">
                             <h3>Hôtel Les mouettes</h3>
                             <p>Nuit à partir de 76€</p>
@@ -110,7 +111,7 @@
                         </div>
                     </li>
                     <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/merS.jpg" class="imgheberg">
+                        <img src="assets/Images/hebergements/4_small/merS.jpg" class="imgheberg" alt="Image Hôtel Mer">
 
                         <div class="txtheber">
                             <h3>Hôtel de la mer</h3>
@@ -123,7 +124,7 @@
                         </div>
                     </li>
                     <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/panierS.jpg" class="imgheberg">
+                        <img src="assets/Images/hebergements/4_small/panierS.jpg" class="imgheberg" alt="Image Auberge Panier">
                         <div class="txtheber">
                             <h3>Auberge Le Panier</h3>
                             <p>Nuit à partir de 23€</p>
@@ -135,7 +136,7 @@
                         </div>
                     </li>
                     <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/aminaS.jpg" class="imgheberg">
+                        <img src="assets/Images/hebergements/4_small/aminaS.jpg" class="imgheberg" alt="Image Hôtel Amina">
                         <div class="txtheber">
                             <h3>Hôtel chez Amina</h3>
                             <p>Nuit à partir de 96€</p>
@@ -155,7 +156,7 @@
                 </a>
                 <ul class="liste" id="populaire">
                     <li class="pop">
-                        <img src="assets/Images/hebergements/4_small/soleildumatinS.jpg" class="imgpop">
+                        <img src="assets/Images/hebergements/4_small/soleildumatinS.jpg" class="imgpop" alt="Image Hôtel Soleil Matin">
                         <div class="txtpop">
                             <h3>Hôtel Le soleil du matin</h3>
                             <p>Nuit à partir de 128€</p>
@@ -166,7 +167,7 @@
                         </div>
                     </li>
                     <li class="pop">
-                        <img src="assets/Images/hebergements/4_small/coeurdeleauS.jpg" class="imgpop">
+                        <img src="assets/Images/hebergements/4_small/coeurdeleauS.jpg" class="imgpop" alt="Image Coeur de l'eau Chambre d'hôtes">
                         <div class="txtpop">
                             <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                             <p>Nuit à partir de 71€</p>
@@ -178,7 +179,7 @@
                         </div>
                     </li>
                     <li class="pop">
-                        <img src="assets/Images/hebergements/4_small/bleuetblancS.jpg" class="imgpop">
+                        <img src="assets/Images/hebergements/4_small/bleuetblancS.jpg" class="imgpop" alt="Image Hôtel Bleu et Blanc">
                         <div class="txtpop">
                             <h3>Hôtel Tout bleu et Blanc</h3>
                             <p>Nuit à partir de 68€</p>
@@ -192,18 +193,35 @@
                 </ul>
             </article>
         </section>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <section class="section">
-            <h2 id="activite">Activités à Marseille</h2>
-            <article>
-
-            </article>
-            <article>
-
-            </article>
-            <article>
-
-            </article>
+        
+        <section id="activite">
+            <h2 class="titreactivite">Activités à Marseille</h2>
+            <ul class="active">
+                <li class="activ">
+                    <img src="Assets/Images/activites/4_small/vieuxport.jpg" class="imgactiv" alt="Image Vieux Port">
+                    <p class="soutitre">Vieux Port</p>
+                </li>
+                <li class="activ">
+                    <img src="Assets/Images/activites/4_small/pomegues.jpg" class="" alt="Image du Fort de Pomegues">
+                    <p class="soutitre">Fort de Pomègues</p>
+                </li>                
+                <li class="activ">
+                    <img src="Assets/Images/activites/4_small/frioul.jpg" class="" alt="Image de l'Îles du Frioul ">
+                    <p class="soutitre">Îles du Frioul</p>
+                </li>
+                <li class="activ">
+                    <img src="Assets/Images/activites/4_small/calanques.jpg" class="imgactiv" alt="Image du Parc National des Calanques">
+                    <p class="soutitre">Parc National des Calanques</p>
+                </li>
+                <li class="activ">
+                    <img src="Assets/Images/activites/4_small/damedelagarde.jpg" class="" alt="Image de Notre dame de la Garde">
+                    <p class="soutitre">Notre-Dame-de-la-Garde</p>
+                </li>
+                <li class="activ">
+                    <img src="Assets/Images/activites/4_small/longchamp.jpg" class="" alt="Image du Parc Longchamp">
+                    <p class="soutitre">Parc Longchamp</p>
+                </li>
+            </ul>
         </section>
     </main>
     <footer>
