--- a/Reservia.html
+++ b/Reservia.html
@@ -41,8 +41,7 @@
                 <form>
                     <i class="fas fa-map-marker-alt pos"></i>
                     <input type="search" placeholder="Marseille, France" id="txt">
-                    <i id="search1" class="fas fa-lg fa-search"></i><input id="search" type="submit"
-                        value="Rechercher">
+                    <i id="search1" class="fas fa-lg fa-search"></i><input id="search" type="submit" value="Rechercher">
                 </form>
             </article>
             <article>
@@ -75,7 +74,8 @@
                 <h2 class="titremar">Hébergements à Marseille</h2>
                 <ul class="liste" id="hebergement">
                     <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/cannebiereS.jpg" class="imgheberg" alt="Image Auberge Cannebiere">
+                        <img src="assets/Images/hebergements/4_small/cannebiereS.jpg" class="imgheberg"
+                            alt="Image Auberge Cannebiere">
                         <div class="txtheber">
                             <h3>Auberge La Cannebière</h3>
                             <p>Nuit à partir de 25€</p>
@@ -87,7 +87,8 @@
                         </div>
                     </li>
                     <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/portS.jpg" class="imgheberg" alt="Image Hôtel Port">
+                        <img src="assets/Images/hebergements/4_small/portS.jpg" class="imgheberg"
+                            alt="Image Hôtel Port">
                         <div class="txtheber">
                             <h3>Hôtel du port</h3>
                             <p>Nuit à partir de 52€</p>
@@ -99,7 +100,8 @@
                         </div>
                     </li>
                     <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/mouetteS.jpg" class="imgheberg" alt="Image Hôtel Mouettes">
+                        <img src="assets/Images/hebergements/4_small/mouetteS.jpg" class="imgheberg"
+                            alt="Image Hôtel Mouettes">
                         <div class="txtheber">
                             <h3>Hôtel Les mouettes</h3>
                             <p>Nuit à partir de 76€</p>
@@ -124,7 +126,8 @@
                         </div>
                     </li>
                     <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/panierS.jpg" class="imgheberg" alt="Image Auberge Panier">
+                        <img src="assets/Images/hebergements/4_small/panierS.jpg" class="imgheberg"
+                            alt="Image Auberge Panier">
                         <div class="txtheber">
                             <h3>Auberge Le Panier</h3>
                             <p>Nuit à partir de 23€</p>
@@ -136,7 +139,8 @@
                         </div>
                     </li>
                     <li class="heberg">
-                        <img src="assets/Images/hebergements/4_small/aminaS.jpg" class="imgheberg" alt="Image Hôtel Amina">
+                        <img src="assets/Images/hebergements/4_small/aminaS.jpg" class="imgheberg"
+                            alt="Image Hôtel Amina">
                         <div class="txtheber">
                             <h3>Hôtel chez Amina</h3>
                             <p>Nuit à partir de 96€</p>
@@ -156,7 +160,8 @@
                 </a>
                 <ul class="liste" id="populaire">
                     <li class="pop">
-                        <img src="assets/Images/hebergements/4_small/soleildumatinS.jpg" class="imgpop" alt="Image Hôtel Soleil Matin">
+                        <img src="assets/Images/hebergements/4_small/soleildumatinS.jpg" class="imgpop"
+                            alt="Image Hôtel Soleil Matin">
                         <div class="txtpop">
                             <h3>Hôtel Le soleil du matin</h3>
                             <p>Nuit à partir de 128€</p>
@@ -167,7 +172,8 @@
                         </div>
                     </li>
                     <li class="pop">
-                        <img src="assets/Images/hebergements/4_small/coeurdeleauS.jpg" class="imgpop" alt="Image Coeur de l'eau Chambre d'hôtes">
+                        <img src="assets/Images/hebergements/4_small/coeurdeleauS.jpg" class="imgpop"
+                            alt="Image Coeur de l'eau Chambre d'hôtes">
                         <div class="txtpop">
                             <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                             <p>Nuit à partir de 71€</p>
@@ -179,7 +185,8 @@
                         </div>
                     </li>
                     <li class="pop">
-                        <img src="assets/Images/hebergements/4_small/bleuetblancS.jpg" class="imgpop" alt="Image Hôtel Bleu et Blanc">
+                        <img src="assets/Images/hebergements/4_small/bleuetblancS.jpg" class="imgpop"
+                            alt="Image Hôtel Bleu et Blanc">
                         <div class="txtpop">
                             <h3>Hôtel Tout bleu et Blanc</h3>
                             <p>Nuit à partir de 68€</p>
@@ -193,7 +200,7 @@
                 </ul>
             </article>
         </section>
-        
+
         <section id="activite">
             <h2 class="titreactivite">Activités à Marseille</h2>
             <ul class="active">
@@ -202,28 +209,30 @@
                     <p class="soutitre">Vieux Port</p>
                 </li>
                 <li class="activ">
-                    <img src="Assets/Images/activites/4_small/pomegues.jpg" class="" alt="Image du Fort de Pomegues">
-                    <p class="soutitre">Fort de Pomègues</p>
-                </li>                
-                <li class="activ">
-                    <img src="Assets/Images/activites/4_small/frioul.jpg" class="" alt="Image de l'Îles du Frioul ">
-                    <p class="soutitre">Îles du Frioul</p>
+                        <img src="Assets/Images/activites/4_small/pomegues.jpg" class="imgactiv2"
+                            id="imga2" alt="Image du Fort de Pomegues">
+                        <p class="soutitre">Fort de Pomègues</p>
+                        <img src="Assets/Images/activites/4_small/frioul.jpg" class="imgactiv2"
+                            id="imga3" alt="Image de l'Îles du Frioul ">
+                        <p class="soutitre">Îles du Frioul</p>
                 </li>
                 <li class="activ">
-                    <img src="Assets/Images/activites/4_small/calanques.jpg" class="imgactiv" alt="Image du Parc National des Calanques">
+                    <img src="Assets/Images/activites/4_small/calanques.jpg" class="imgactiv"
+                        alt="Image du Parc National des Calanques">
                     <p class="soutitre">Parc National des Calanques</p>
                 </li>
                 <li class="activ">
-                    <img src="Assets/Images/activites/4_small/damedelagarde.jpg" class="" alt="Image de Notre dame de la Garde">
-                    <p class="soutitre">Notre-Dame-de-la-Garde</p>
-                </li>
-                <li class="activ">
-                    <img src="Assets/Images/activites/4_small/longchamp.jpg" class="" alt="Image du Parc Longchamp">
-                    <p class="soutitre">Parc Longchamp</p>
+                        <img src="Assets/Images/activites/4_small/damedelagarde.jpg" class="imgactiv2"
+                        id="imga5" alt="Image de Notre dame de la Garde">
+                        <p class="soutitre">Notre-Dame-de-la-Garde</p>
+                        <img src="Assets/Images/activites/4_small/longchamp.jpg" class="imgactiv2"
+                           id="imga6" alt="Image du Parc Longchamp">
+                        <p class="soutitre">Parc Longchamp</p>
                 </li>
             </ul>
         </section>
     </main>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <footer>
 
     </footer>
