--- a/Reservia.html
+++ b/Reservia.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <!-- Les différents CSS en fonction de la taille de l'écran -->
-    <link rel="stylesheet" href="Assets/CSS/mobile.css" />
-    <link rel="stylesheet" href="Assets/CSS/tablette.css" />
-    <link rel="stylesheet" href="Assets/CSS/pc.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Assets/CSS/pc.css" />
+    <link rel="stylesheet" href="Assets/CSS/tablette.css" />
+    <link rel="stylesheet" href="Assets/CSS/mobile.css" />
+    
     <!-- Les liens pour allez récuper ma police d'écriture "Raleway"-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,7 +42,7 @@
                 <form>
                     <i class="fas fa-map-marker-alt pos"></i>
                     <input type="search" placeholder="Marseille, France" id="txt">
-                    <i id="search1" class="fas fa-lg fa-search"></i><input id="search" type="submit" value="Rechercher">
+                    <button id="search1" ><i class="fas fa-lg fa-search"></i></button><input id="search" type="submit" value="Rechercher">
                 </form>
             </article>
             <article>
@@ -200,7 +201,6 @@
                 </ul>
             </article>
         </section>
-
         <section id="activite">
             <h2 class="titreactivite">Activités à Marseille</h2>
             <ul class="active">
