--- a/Reservia.html
+++ b/Reservia.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Assets/CSS/pc.css" />
     <link rel="stylesheet" href="Assets/CSS/tablette.css" />
+    <link rel="stylesheet" href="Assets/CSS/tablette2.css" />
     <link rel="stylesheet" href="Assets/CSS/mobile.css" />
     
     <!-- Les liens pour allez récuper ma police d'écriture "Raleway"-->
@@ -46,7 +47,7 @@
                 </form>
             </article>
             <article>
-                <div id="filtr">
+                <div class="filtr">
                     <h3>Filtres</h3>
                     <ul id="filtre">
                         <li>
@@ -232,9 +233,49 @@
             </ul>
         </section>
     </main>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <footer>
+        <div>
+            <ul>
+                <li>
 
+                </li>
+                <li>
+
+                </li>
+                <li>
+
+                </li>
+                <li>
+
+                </li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <li>
+
+                </li>
+                <li>
+
+                </li>
+                <li>
+
+                </li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <li>
+
+                </li>
+                <li>
+
+                </li>
+                <li>
+
+                </li>
+            </ul>
+        </div>
     </footer>
 </body>
 
