--- a/Reservia.html
+++ b/Reservia.html
@@ -158,7 +158,7 @@
             </article>
             <article class="popu">
                 <a class="titrepop">
-                    <h2>Les plus populaire</h2><i class="fas fa-chart-line graph"></i>
+                    <h2>Les plus populaires</h2><i class="fas fa-chart-line graph"></i>
                 </a>
                 <ul class="liste" id="populaire">
                     <li class="pop">
@@ -233,48 +233,22 @@
             </ul>
         </section>
     </main>
-    <footer>
+    <footer class="baspage">
         <div>
-            <ul>
-                <li>
-
-                </li>
-                <li>
-
-                </li>
-                <li>
-
-                </li>
-                <li>
-
-                </li>
-            </ul>
+            <h3 class="titraide">A propos</h3>
+            <a href="#" class="aide">Fonctionnement du site</a>
+            <a href="#" class="aide">Conditions générales de vente</a>
+            <a href="#" class="aide">Données et confidentialité</a>
         </div>
         <div>
-            <ul>
-                <li>
-
-                </li>
-                <li>
-
-                </li>
-                <li>
-
-                </li>
-            </ul>
+            <h3 class="titraide">Nos hébergements</h3>
+            <a href="#" class="aide">Charte qualité</a>
+            <a href="#" class="aide">Soumettre votre hôtel</a>
         </div>
         <div>
-            <ul>
-                <li>
-
-                </li>
-                <li>
-
-                </li>
-                <li>
-
-                </li>
-            </ul>
+            <h3 class="titraide">Assistance</h3>
+            <a href="#" class="aide">Centre d'aide</a>
+            <a href="#" class="aide">Nous contacter</a>
         </div>
     </footer>
 </body>
