--- a/Reservia.html
+++ b/Reservia.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="Assets/CSS/tablette.css" />
     <link rel="stylesheet" href="Assets/CSS/tablette2.css" />
     <link rel="stylesheet" href="Assets/CSS/mobile.css" />
-    
+
     <!-- Les liens pour allez récuper ma police d'écriture "Raleway"-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,10 +25,10 @@
         <a href="Reservia.html"><img src="assets/Images/logo/Reservia.png" id="logo" alt="Logo"></a>
         <nav>
             <ul>
-                <li>
+                <li class="h">
                     <a href="#hebergement" id="heberg">Hébergements</a>
                 </li>
-                <li>
+                <li class="a">
                     <a href="#activite" id="act">Activités</a>
                 </li>
             </ul>
@@ -43,12 +43,13 @@
                 <form>
                     <i class="fas fa-map-marker-alt pos"></i>
                     <input type="search" placeholder="Marseille, France" id="txt">
-                    <button id="search1" ><i class="fas fa-lg fa-search"></i></button><input id="search" type="submit" value="Rechercher">
+                    <button id="search1"><i class="fas fa-lg fa-search"></i></button><input id="search" type="submit"
+                        value="Rechercher">
                 </form>
             </article>
             <article>
                 <div class="filtr">
-                    <h3>Filtres</h3>
+                    <h3 class="titrefiltre">Filtres</h3>
                     <ul id="filtre">
                         <li>
                             <i class="fas fa-money-bill-wave bleu"></i>
@@ -210,12 +211,12 @@
                     <p class="soutitre">Vieux Port</p>
                 </li>
                 <li class="activ">
-                        <img src="Assets/Images/activites/4_small/pomegues.jpg" class="imgactiv2"
-                            id="imga2" alt="Image du Fort de Pomegues">
-                        <p class="soutitre">Fort de Pomègues</p>
-                        <img src="Assets/Images/activites/4_small/frioul.jpg" class="imgactiv2"
-                            id="imga3" alt="Image de l'Îles du Frioul ">
-                        <p class="soutitre">Îles du Frioul</p>
+                    <img src="Assets/Images/activites/4_small/pomegues.jpg" class="imgactiv2" id="imga2"
+                        alt="Image du Fort de Pomegues">
+                    <p class="soutitre">Fort de Pomègues</p>
+                    <img src="Assets/Images/activites/4_small/frioul.jpg" class="imgactiv2" id="imga3"
+                        alt="Image de l'Îles du Frioul ">
+                    <p class="soutitre">Îles du Frioul</p>
                 </li>
                 <li class="activ">
                     <img src="Assets/Images/activites/4_small/calanques.jpg" class="imgactiv"
@@ -223,12 +224,12 @@
                     <p class="soutitre">Parc National des Calanques</p>
                 </li>
                 <li class="activ">
-                        <img src="Assets/Images/activites/4_small/damedelagarde.jpg" class="imgactiv2"
-                        id="imga5" alt="Image de Notre dame de la Garde">
-                        <p class="soutitre">Notre-Dame-de-la-Garde</p>
-                        <img src="Assets/Images/activites/4_small/longchamp.jpg" class="imgactiv2"
-                           id="imga6" alt="Image du Parc Longchamp">
-                        <p class="soutitre">Parc Longchamp</p>
+                    <img src="Assets/Images/activites/4_small/damedelagarde.jpg" class="imgactiv2" id="imga5"
+                        alt="Image de Notre dame de la Garde">
+                    <p class="soutitre">Notre-Dame-de-la-Garde</p>
+                    <img src="Assets/Images/activites/4_small/longchamp.jpg" class="imgactiv2" id="imga6"
+                        alt="Image du Parc Longchamp">
+                    <p class="soutitre">Parc Longchamp</p>
                 </li>
             </ul>
         </section>
