--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="UTF-8" />
     <!-- Les différents CSS en fonction de la taille de l'écran -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Assets/CSS/pc.css" />
-    <link rel="stylesheet" href="Assets/CSS/tablette.css" />
-    <link rel="stylesheet" href="Assets/CSS/tablette2.css" />
-    <link rel="stylesheet" href="Assets/CSS/mobile.css" />
+    <link rel="stylesheet" href="assets/CSS/pc.css" />
+    <link rel="stylesheet" href="assets/CSS/tablette.css" />
+    <link rel="stylesheet" href="assets/CSS/tablette2.css" />
+    <link rel="stylesheet" href="assets/CSS/mobile.css" />
 
     <!-- Les liens pour allez récuper ma police d'écriture "Raleway"-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,13 +18,13 @@
 
     <!-- Le lien pour les FA icone -->
     <script src="https://kit.fontawesome.com/0b5afe6080.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" type="image/png" href="Assets/Images/logo/r.png">
+    <link rel="shortcut icon" type="image/png" href="assets/Images/logo/r.png">
     <title>Reservia</title>
 </head>
 
 <body>
     <header>
-        <a href="Reservia.html"><img src="assets/Images/logo/Reservia.png" id="logo" alt="Logo"></a>
+        <a href="index.html"><img src="assets/Images/logo/reservia.png" id="logo" alt="Logo"></a>
         <nav>
             <ul>
                 <li class="h">
@@ -79,7 +79,7 @@
                 <h2 class="titremar">Hébergements à Marseille</h2>
                 <ul class="liste" id="hebergement">
                     <li class="heberg">
-                        <a href="" class="lienheberg">
+                        <a href="#" class="lienheberg">
                             <img src="assets/Images/hebergements/4_small/cannebiereS.jpg" class="imgheberg"
                                 alt="Image Auberge Cannebiere">
                             <div class="txtheber">
@@ -94,7 +94,7 @@
                         </a>
                     </li>
                     <li class="heberg">
-                        <a href="" class="lienheberg">
+                        <a href="#" class="lienheberg">
                             <img src="assets/Images/hebergements/4_small/portS.jpg" class="imgheberg"
                                 alt="Image Hôtel Port">
                             <div class="txtheber">
@@ -109,7 +109,7 @@
                         </a>
                     </li>
                     <li class="heberg">
-                        <a href="" class="lienheberg">
+                        <a href="#" class="lienheberg">
                             <img src="assets/Images/hebergements/4_small/mouetteS.jpg" class="imgheberg"
                                 alt="Image Hôtel Mouettes">
                             <div class="txtheber">
@@ -124,7 +124,7 @@
                         </a>
                     </li>
                     <li class="heberg">
-                        <a href="" class="lienheberg">
+                        <a href="#" class="lienheberg">
                             <img src="assets/Images/hebergements/4_small/merS.jpg" class="imgheberg"
                                 alt="Image Hôtel Mer">
                             <div class="txtheber">
@@ -139,7 +139,7 @@
                         </a>
                     </li>
                     <li class="heberg">
-                        <a href="" class="lienheberg">
+                        <a href="#" class="lienheberg">
                             <img src="assets/Images/hebergements/4_small/panierS.jpg" class="imgheberg"
                                 alt="Image Auberge Panier">
                             <div class="txtheber">
@@ -154,7 +154,7 @@
                         </a>
                     </li>
                     <li class="heberg">
-                        <a href="" class="lienheberg">
+                        <a href="#" class="lienheberg">
                             <img src="assets/Images/hebergements/4_small/aminaS.jpg" class="imgheberg"
                                 alt="Image Hôtel Amina">
                             <div class="txtheber">
@@ -178,7 +178,7 @@
                 </a>
                 <ul class="liste" id="populaire">
                     <li class="pop">
-                        <a href="" class="lienpop">
+                        <a href="#" class="lienpop">
                             <img src="assets/Images/hebergements/4_small/soleildumatinS.jpg" class="imgpop"
                                 alt="Image Hôtel Soleil Matin">
                             <div class="txtpop">
@@ -193,7 +193,7 @@
                         </a>
                     </li>
                     <li class="pop">
-                        <a href="" class="lienpop">
+                        <a href="#" class="lienpop">
                             <img src="assets/Images/hebergements/4_small/coeurdeleauS.jpg" class="imgpop"
                                 alt="Image Coeur de l'eau Chambre d'hôtes">
                             <div class="txtpop">
@@ -208,7 +208,7 @@
                         </a>
                     </li>
                     <li class="pop">
-                        <a href="" class="lienpop">
+                        <a href="#" class="lienpop">
                             <img src="assets/Images/hebergements/4_small/bleuetblancS.jpg" class="imgpop"
                                 alt="Image Hôtel Bleu et Blanc">
                             <div class="txtpop">
@@ -229,39 +229,39 @@
             <h2 class="titreactivite">Activités à Marseille</h2>
             <ul class="active">
                 <li class="activ">
-                    <a href="" class="bigactiv">
-                        <img src="Assets/Images/activites/4_small/vieuxport.jpg" class="imgactiv"
+                    <a href="#" class="bigactiv">
+                        <img src="assets/Images/activites/4_small/vieuxport.jpg" class="imgactiv"
                             alt="Image Vieux Port">
                         <p class="soutitre">Vieux Port</p>
                     </a>
                 </li>
                 <li class="activ">
-                    <a href="" class="smallactiv">
-                        <img src="Assets/Images/activites/4_small/pomegues.jpg" class="imgactiv2" id="imga2"
+                    <a href="#" class="smallactiv">
+                        <img src="assets/Images/activites/4_small/pomegues.jpg" class="imgactiv2" id="imga2"
                             alt="Image du Fort de Pomegues">
                         <p class="soutitre">Fort de Pomègues</p>
                     </a>
-                    <a href="" class="smallactiv">
-                        <img src="Assets/Images/activites/4_small/frioul.jpg" class="imgactiv2" id="imga3"
+                    <a href="#" class="smallactiv">
+                        <img src="assets/Images/activites/4_small/frioul.jpg" class="imgactiv2" id="imga3"
                             alt="Image de l'Îles du Frioul ">
                         <p class="soutitre">Îles du Frioul</p>
                     </a>
                 </li>
                 <li class="activ">
-                    <a href="" class="bigactiv">
-                        <img src="Assets/Images/activites/4_small/calanques.jpg" class="imgactiv"
+                    <a href="#" class="bigactiv">
+                        <img src="assets/Images/activites/4_small/calanques.jpg" class="imgactiv"
                             alt="Image du Parc National des Calanques">
                         <p class="soutitre">Parc National des Calanques</p>
                     </a>
                 </li>
                 <li class="activ">
-                    <a href="" class="smallactiv">
-                        <img src="Assets/Images/activites/4_small/damedelagarde.jpg" class="imgactiv2" id="imga5"
+                    <a href="#" class="smallactiv">
+                        <img src="assets/Images/activites/4_small/damedelagarde.jpg" class="imgactiv2" id="imga5"
                             alt="Image de Notre dame de la Garde">
                         <p class="soutitre">Notre-Dame-de-la-Garde</p>
                     </a>
-                    <a href="" class="smallactiv">
-                        <img src="Assets/Images/activites/4_small/longchamp.jpg" class="imgactiv2" id="imga6"
+                    <a href="#" class="smallactiv">
+                        <img src="assets/Images/activites/4_small/longchamp.jpg" class="imgactiv2" id="imga6"
                             alt="Image du Parc Longchamp">
                         <p class="soutitre">Parc Longchamp</p>
                     </a>
