--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
     </header>
     <main>
-        <section class="section">
+        <div class="section">
             <article>
                 <h1>Trouver votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre ville ou en pleine nature</p>
@@ -73,8 +73,8 @@
                 </div>
                 <p><i class="fas fa-info bleu"></i>Plus de 500 logements sont disponibles dans cette ville</p>
             </article>
-        </section>
-        <section class="section1" id="ancreheber">
+        </div>
+        <div class="section1" id="ancreheber">
             <article class="marseille">
                 <h2 class="titremar">Hébergements à Marseille</h2>
                 <ul class="liste" id="hebergement">
@@ -224,7 +224,7 @@
                     </li>
                 </ul>
             </article>
-        </section>
+        </div>
         <section id="activite">
             <h2 class="titreactivite">Activités à Marseille</h2>
             <ul class="active">
